# AgentShield

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PHASE_0_COMPLETE.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  security_audit_report.md  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
agentshield/: __init__.py  config.py  exceptions.py  runtime.py  scrubber.py
agentshield-desktop/: .env.example  Dockerfile  electron-builder.config.js  package-lock.json  package.json  setup.py  tailwind.config.ts  tailwind.config.ts.bak  tsconfig.json  tsconfig.node.json  vite.config.ts
agentshield-desktop/electron/: backend-manager.ts  main.ts  preload.ts
agentshield-desktop/src/: App.tsx  Layout.tsx  electron.d.ts  index.css  store.ts  views.tsx
agentshield-desktop/src/components/: index.ts
agentshield-desktop/src/hooks/: useAgentGraph.ts
agentshield-desktop/src/store/: useShieldStore.ts
agentshield-desktop/src/styles/: index.css
agentshield-desktop/src/types/: events.ts  index.ts
agentshield/adapters/: __init__.py  anthropic_adapter.py  autogen_adapter.py  base.py  langchain_adapter.py  llamaindex_adapter.py  openai_adapter.py  raw_api_adapter.py  registry.py
agentshield/audit/: __init__.py  chain.py  exporter.py  models.py  verifier.py
agentshield/canary/: __init__.py  models.py  system.py
agentshield/cli/: __init__.py  app.py  attack_library.py  certify.py  html_report.py  main.py  report.py  runner.py
agentshield/cli/commands/: certify.py  redteam.py
agentshield/detection/: __init__.py  base_detector.py  embedding_service.py  engine.py  goal_drift.py  inter_agent.py  memory_poison.py  prompt_injection.py  tool_chain.py
agentshield/dna/: __init__.py  baseline.py  features.py  scorer.py
agentshield/events/: __init__.py  emitter.py  models.py
agentshield/interceptors/: __init__.py  base.py  llm_interceptor.py  memory_interceptor.py  tool_interceptor.py
agentshield/notifications/: __init__.py  pagerduty_notifier.py  rate_limiter.py  slack_notifier.py  webhook_config.py  webhook_notifier.py
agentshield/observability/: __init__.py  grafana_dashboard.json  otel_config.py  otel_exporter.py  prometheus_exporter.py
agentshield/policy/: __init__.py  compiler.py  evaluator.py  models.py
agentshield/provenance/: __init__.py  models.py  tracker.py
agentshield/siem/: __init__.py  cef_formatter.py  http_exporter.py  siem_config.py  siem_manager.py  syslog_exporter.py
api/detection-engine/: index.html
api/events/: index.html
api/exceptions/: index.html
api/policy/: index.html
api/runtime/: index.html
api/shield/: index.html
backend/: Dockerfile  __init__.py  config.py  dependencies.py  event_store.py  main.py  redis_bridge.py  requirements.txt
backend/models/: __init__.py  events.py
backend/routers/: __init__.py  agents_router.py  alerts_router.py  audit_router.py  demo.py  events.py  events_router.py  schemas.py  sessions.py  ws.py
backend/services/: __init__.py  event_store.py  redis_service.py
cli/: __init__.py  main.py
contributing/: index.html
docs/: architecture.md  attack-vectors.md  canary.md  contributing.md  dna-fingerprinting.md  index.md  policy-guide.md  provenance.md  quickstart.md  redteam.md  requirements.txt  sdk-reference.md
docs/api/: detection-engine.md  events.md  exceptions.md  policy.md  runtime.md  shield.md
docs/getting-started/: how-it-works.md  installation.md  quickstart.md
docs/integrations/: autogen.md  langchain.md  llamaindex.md  openai-anthropic.md
docs/observability/: dashboard.md  grafana-siem.md  opentelemetry.md  webhooks.md
docs/policies/: builtin.md  custom.md
docs/redteam/: certify.md  overview.md  running-attacks.md
docs/research/: audit-trail.md  canary-injection.md  dna-fingerprinting.md  provenance-tracking.md
docs/threats/: behavioral-anomalies.md  goal-drift.md  inter-agent-injection.md  memory-poisoning.md  overview.md  prompt-injection.md  tool-chain-escalation.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AgentGraphView.tsx  AlertPanel.tsx  DemoControlPanel.tsx  EventFeed.tsx  ForensicTracePanel.tsx  Header.tsx  index.ts
frontend/src/hooks/: useAgentGraph.ts  useWebSocket.ts
frontend/src/services/: wsManager.ts
frontend/src/store/: useAgentStore.ts
frontend/src/styles/: index.css
frontend/src/types/: events.ts  index.ts  (+1 more)
getting-started/how-it-works/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
integrations/autogen/: index.html
integrations/langchain/: index.html
integrations/llamaindex/: index.html
integrations/openai-anthropic/: index.html
observability/dashboard/: index.html
observability/grafana-siem/: index.html
observability/opentelemetry/: index.html
observability/webhooks/: index.html
policies/builtin/: index.html
policies/custom/: index.html
redteam/certify/: index.html
redteam/overview/: index.html
redteam/running-attacks/: index.html
research/audit-trail/: index.html
research/canary-injection/: index.html
research/dna-fingerprinting/: index.html
research/provenance-tracking/: index.html
sdk-reference/: index.html
search/: search_index.json
tests/: conftest.py
tests/e2e/: test_attack_detection.py  test_clean_run.py
tests/integration/: test_backend_api.py  test_sdk_langchain.py  test_websocket.py
tests/unit/: test_config.py  test_detectors.py  test_event_emitter.py  test_event_models.py  test_exceptions.py  test_interceptors.py  test_policy.py
threats/behavioral-anomalies/: index.html
threats/goal-drift/: index.html
threats/inter-agent-injection/: index.html
threats/memory-poisoning/: index.html
threats/overview/: index.html
threats/prompt-injection/: index.html
threats/tool-chain-escalation/: index.html
(+14 files in other folders)
