[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentshield*"]

[project]
name = "agentshield"
version = "0.1.0"
description = "Real-time security runtime for AI agents"
authors = [{name = "GroundTruth", email = "belhekaraditya96@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-community>=0.2.0",
  "redis>=5.0.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "sentence-transformers>=3.0.0",
  "numpy>=1.26.0",
  "loguru>=0.7.0",
  "python-dotenv>=1.0.0",
  "faiss-cpu>=1.8.0",
  "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.27.0",
  "black>=24.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["/scratch/tests"]
