[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-shield-sdk"
version = "0.1.0"
description = "Production-grade security runtime for AI agents"
authors = [
  { name = "GroundTruth", email = "belhekaraditya96@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
readme = "README.md"
keywords = [
  "ai-security", "llm-security", "agent-security",
  "prompt-injection", "langchain", "ai-agents",
  "security-runtime", "red-team"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  # Core agent frameworks
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-community>=0.2.0",

  # Data / ML
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",

  # Storage / messaging
  "redis[asyncio]>=5.0.0",

  # API
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",

  # Config + validation
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.0",

  # Logging
  "loguru>=0.7.0",

  # Crypto (for audit chain)
  "cryptography>=42.0.0",

  # CLI (Phase 9)
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.27.0",
  "black>=24.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "types-redis>=4.6.0",
]
llama = [
  "llama-index>=0.10.0",
]
autogen = [
  "pyautogen>=0.2.0",
]

[project.scripts]
agentshield = "cli.main:app"

[project.urls]
Homepage = "https://github.com/AdityaBelhekar/AgentShield"
Documentation = "https://agentshield.dev/docs"
Repository = "https://github.com/AdityaBelhekar/AgentShield"
Issues = "https://github.com/AdityaBelhekar/AgentShield/issues"
Changelog = "https://github.com/AdityaBelhekar/AgentShield/blob/main/CHANGELOG.md"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["/scratch/tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["agentshield"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.setuptools.packages.find]
include = ["agentshield", "agentshield.*"]
exclude = ["scratch*", "backend*", "frontend*", "cli*", "docs*"]